--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Om Jagtap",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "http-status-code": "^2.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.1",
     "sequelize": "^6.36.0",
     "sequelize-cli": "^6.6.2"
